# compliance-agent

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_V4.md  BULK_RESTLET_FIX.md  CASH_ACCOUNTANT_ROLE_ANALYSIS.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_MULTI_AGENT.md  CLEANUP_SUMMARY.md  CONTEXT_AWARE_SOD_IMPLEMENTATION.md  DATA_ENRICHMENT_FLOW.md  DEMO_GUIDE.md  DEMO_UPDATE_SUMMARY.md  DEPLOYMENT_TROUBLESHOOTING.md  EXCEPTION_CONTROLS_PLAN.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MCP_SETUP_GUIDE.md  Makefile  OKTA_NETSUITE_RECONCILIATION_PLAN.md  PERMISSION_FIX_SUMMARY.md  PER_USER_SUMMARY_FIX.md  PGVECTOR_IMPLEMENTATION_COMPLETE.md  PGVECTOR_SETUP.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE_1_COMPLETION.md  PRD_SOD_COMPLIANCE_SYSTEM.md  PRODUCTION_DEPLOYMENT.md  PROJECT_LAYOUT.md  QUICK_DEPLOY.md  QUICK_START_FIVETRAN_ANALYSIS.md  README.md  README_SLACK_BOT.md  RESPONSE_STYLE_IMPLEMENTATION_PLAN.md  RESTLET_OPTIMIZATION_SUMMARY.md  (+27 more)
agents/: __init__.py  analyzer.py  data_collector.py  knowledge_base.py  knowledge_base_pgvector.py  notifier.py  orchestrator.py  report_generator.py  risk_assessor.py
api/: __init__.py  main.py
config/: llm_config.example.yaml  model_config.py  role_keywords.yaml
connectors/: __init__.py  base_connector.py  netsuite_connector.py
data/: compensating_controls.json  job_role_mappings.json  netsuite_permission_categories.json  netsuite_permission_mapping.json  netsuite_sod_config_unified.json
database/: schema.sql
demos/: demo_agent.py  demo_analyzer.py  demo_cache_service.py  demo_end_to_end.py  demo_simple.py  demo_sod_usecase.py  demo_token_tracking.py  list_users.py  quick_test.py  test_compliance_report_notification.py  test_customizable_reports.py  test_two_users.py
docs/: AGENT_RESPONSE_WITH_ATTACHMENTS.md  ANALYZER_AGENT.md  ANGULAR_UX_PLAN.md  ARCHITECTURE_JOB_ROLE_BASED_SOD.md  ARCHITECTURE_LEVEL_BASED_SOD.md  ARCHITECTURE_LUCID.md  ARCHITECTURE_PRESENTATION.md  ARTIFACT_MAP.md  AWS_PRODUCTION_DEPLOYMENT.md  CACHE_IMPLEMENTATION.md  CACHE_IMPLEMENTATION_SUMMARY.md  COLLECTION_AGENT.md  COST_ESTIMATES_EXPLAINED.md  DATABASE_LAYER_README.md  DATABASE_SEEDING.md  DATABASE_UML.md  DEMO_USER_GUIDE.md  DEPARTMENT_FILTERING_FIX.md  FIVETRAN_ROLE_ANALYSIS.md  HYBRID_ARCHITECTURE.md  INTERVIEW_QA.md  KNOWLEDGE_BASE_GUARDRAILS.md  LESSONS_LEARNED.md  MCP_ASYNC_FIX_SUMMARY.md  MCP_CLAUDE_UI_SETUP.md  MCP_INTEGRATION_SPEC.md  MCP_PHASE1_COMPLETE.md  ONE_PAGER.md  (+20 more)
(+187 files in other folders)
